# codyx-web

./: .env  .gitignore  DOCUMENTATION.md  README.md  idl.json  keypair.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
contracts/: hardhat.config.js
contracts/eth/: Application.sol
contracts/icp/: dfx.json
contracts/icp/.dfx/local/: canister_ids.json  network-id
contracts/icp/.dfx/local/canisters/codyx_icp/: codyx_icp.did.d.ts  codyx_icp.did.js  index.js
contracts/icp/.dfx/local/lsp/: gx2xg-kmaaa-aaaaa-qaasq-cai.did
contracts/icp/.kybra/codyx_icp/: Cargo.toml  py_file_names.csv
contracts/icp/.kybra/codyx_icp/python_source/: main.py
contracts/icp/.kybra/codyx_icp/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20250328161918_first/: migration.sql
src/app/: AppWalletProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/api/applications/: route.ts
src/app/api/auth/: route.ts
src/app/api/auth/createSignInData/: route.ts
src/app/api/auth/verifySIWS/: route.ts
src/app/api/compile/: route.ts
src/app/api/deploy/: route.ts
src/app/api/fetch/: route.ts
src/app/api/project/: route.ts
src/app/app/[id]/: page.tsx
src/app/dashboard/: page.tsx
src/app/features/: page.tsx
src/components/: create-function.tsx  create-object.tsx  navbar.tsx  playground.tsx
src/components/ui/: dialog.tsx  select.tsx
src/lib/: generic.ts  seahorse_helper.ts
