
[package]
name = "codyx_icp"
version = "0.0.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = false
incremental = true
codegen-units = 256

[lib]
crate-type = ["cdylib"]

[features]
azle_include_stdlib = []

[dependencies]
ic-cdk = "0.13.5"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
candid = { version = "0.10.6", features = ["value"] }
candid_parser = "0.1.4"
kybra-vm-value-derive = { path = "./kybra_vm_value_derive" }

rustpython = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = ["stdlib", "encodings"] }
rustpython-vm = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = ["ic"] }
rustpython-stdlib = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = [] }
rustpython-derive = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = [] }
rustpython-compiler-core = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = [] }

# rustpython = { path = "/home/lastmjs/development/RustPython", default-features = false, features = ["stdlib", "encodings"] }
# rustpython-vm = { path = "/home/lastmjs/development/RustPython/vm", default-features = false, features = ["ic"] }
# rustpython-stdlib = { path = "/home/lastmjs/development/RustPython/stdlib", default-features = false, features = [] }
# rustpython-derive = { path = "/home/lastmjs/development/RustPython/derive", default-features = false, features = [] }
# rustpython-compiler-core = { path = "/home/lastmjs/development/RustPython/compiler/core", default-features = false, features = [] }

# rustpython = { path = "/home/RustPython", default-features = false, features = ["stdlib"] }
# rustpython-vm = { path = "/home/RustPython/vm", default-features = false, features = ["ic"] }
# rustpython-stdlib = { path = "/home/RustPython/stdlib", default-features = false, features = [] }
# rustpython-derive = { path = "/home/RustPython/derive", default-features = false, features = [] }
# TODO add this back once we support the full stdlib: https://github.com/demergent-labs/kybra/issues/12
# rustpython-pylib = { git = "https://github.com/demergent-labs/RustPython", rev = "e87c5ddc56ac94fc5dc42aedb1e03bee21e5b9b7", default-features = false, features = ["freeze-stdlib"] }
# rustpython = { path = "../../../../../../RustPython", default-features = false, features = [] }
serde = { version = "1.0.137", default-features = false, features = [] }
async-recursion = "1.0.0"
ic-stable-structures = "0.5.2" # TODO shall we update? Shall we remove the need to specify max size?
slotmap = "1.0.6"

# TODO transient feature can be removed once https://github.com/demergent-labs/azle/issues/1731 is resolved
ic-wasi-polyfill = { version = "0.6.1", features = [
    "transient",
] }

[patch.crates-io]
num-bigint = { git = "https://github.com/rust-num/num-bigint" }
    